<resources>
    <string name="default_preference_key" translatable="false">org.rd-toolkit.basepreferences</string>
    <string name="locale_key">English</string>
    <string name="app_name">Rapid Diagnostic Toolkit</string>
    <string name="nav_header_title">Rapid Diagnostic Toolkit</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_provision_session">New Test</string>
    <string name="title_home">Home</string>
    <string name="title_activity_capture">Capture Test Result</string>
    <string name="provision_begin_resolve_msg">This test will take %s to resolve</string>
    <string name="capture_timer_expiring_countdown_msg">Results expire in: %s</string>
    <string name="adapter_result_name_msg">Enter Result for: %s</string>
    <string name="menu_sessions">Test Sessions</string>
    <string name="sessions_card_title_text">%s</string>
    <string name="home_message_txt">Welcome to the Rapid Diagnostic Toolkit.\n\nThis app is intended to be launched from another supported app, but you can test out a test below</string>
    <string name="tile_txt_flavor_one">%s - %s</string>
    <string name="tile_txt_test_line">%s</string>
    <string name="provision_begin_action">When the test cassette is prepared, press the button below</string>
    <string name="provision_begin_button_text">Start Timer</string>
    <string name="reference_disclaimer_msg">NOTE: This information is not approved by any body and is included only for reference, it is not a replacement for the manufacturer\'s provided instructions.\n\nRefer to the materials provided by the test manufacturer for instructions in applying a test.</string>
    <string name="reference_disclaimer_cbx_msg">I understand and will refer to the manufacturers\' instructions for this test</string>
    <string name="capture_btn_retake_prompt">Retake Test Image</string>
    <string name="capture_btn_take_prompt">Capture Test Image</string>
    <string name="card_view_session_capture_button_text">CAPTURE RESULT</string>
    <string name="fragment_capture_record_results_button_text">Record Results</string>
    <string name="fragment_capture_enter_results_prompt">Please provide your interpretation of the test result</string>
    <string name="fragment_capture_loading_message">Loading Test...</string>
    <string name="fragment_capture_error_see_more_button_text">See More...</string>
    <string name="home_simulate_request_button_text">Simulate Test Request</string>
    <string name="fragment_provision_test_name_caption">Test to be Performed</string>
    <string name="fragment_provision_test_name_none_selected">No Test Selected</string>
    <string name="fragment_provision_test_resolve_time_caption">Time to Resolve</string>
    <string name="fragment_provision_cassette_preview_title">Cassette</string>
    <string name="fragment_provision_cassette_preview_missing_text">No Preview Available</string>
    <string name="fragment_provision_show_instructions_cbx_message">Show Instructions for this RDT</string>
    <string name="fragment_capture_test_status_loading">Loading test details...</string>
    <string name="fragment_capture_test_status_preparing">Test is not yet prepared</string>
    <string name="fragment_capture_test_status_resolving">Test is resolving, please wait for timer</string>
    <string name="fragment_capture_test_status_readable">Test is available to read</string>
    <string name="fragment_capture_test_status_expired">Test result has expired, and cannot be read</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="bottom_menu_text_define">Define</string>
    <string name="bottom_menu_text_instructions">Instructions</string>
    <string name="bottom_menu_text_start">Start</string>
    <string name="bottom_menu_text_timer">Timer</string>
    <string name="bottom_menu_text_results">Results</string>
    <string name="bottom_menu_text_confirm">Confirm</string>
    <string name="error_message_grant_camera">The test scanner requires camera permissions, please grant them and continue</string>
    <string name="component_classifier_unknown_error">Unknown error processing image %s</string>
    <string name="service_message_resolving_title">Test - %s</string>
    <string name="service_message_resolving_text">Time Remaining: %s</string>
    <string name="service_message_ready_text">Test Ready - %s</string>
    <string name="service_message_valid_text">Results valid for: %s</string>
    <string name="service_message_expired_title">Test Expired: %s</string>
    <string name="service_message_expired_text">Test is no longer valid to read</string>
    <string name="service_pending_intent_title_running">Tests are running in the background</string>
    <string name="service_channel_running_name">Running Timers</string>
    <string name="service_channel_running_description">Timers that are processing</string>
    <string name="service_channel_triggered_name">Triggered Timers</string>
    <string name="service_channel_triggered_description">Timers which have fired</string>

    <string name="time_in_seconds">%d Seconds</string>
    <string name="time_in_minutes">%d Minutes</string>
    <string name="fragment_capture_test_expired_message">This test is expired. A new test should be started to ensure an accurate result.</string>
    <string name="fragment_capture_expired_override_message">You may choose to override this warning and continue. This will be recorded with the test result.</string>
    <string name="fragment_capture_override_checkbox_message">I acknowledge that this test result has expired and may no longer be valid</string>
    <string name="fragment_capture_test_override_button_prompt">Override</string>
    <string name="action_job_aid">Job Aid</string>
    <string name="action_job_aid_back">Back</string>
    <string name="capture_timer_title">Test Timer</string>
    <string name="capture_results_title">Test Results</string>
    <string name="capture_record_title">Record Test Results</string>
    <string name="capture_summary_status_timer">Timer</string>
    <string name="capture_summary_status_timer_valid">Valid</string>
    <string name="capture_summary_status_timer_expired">Expired</string>
    <string name="preference_app_language">Application Language</string>
    <string name="preference_app_language_system_default">System Default (%s)</string>
    <string name="capture_timer_accept_error_image">Accept Image</string>
    <string name="fragment_capture_review_results">Review My Choices</string>
    <string name="provision_define_title">Provision a Test</string>
    <string name="provision_instructions_title">Instructions</string>
    <string name="provision_timer_title">Test Timer</string>
    <string name="capture_job_aid_title">Job Aid</string>
    <string name="capture_timer_skip_disclaimer">I confirm that tests which are read before the manufacturer\'s instructions indicate may produce incorrect results</string>
    <string name="capture_timer_skip_button">Skip Timer and Read Result</string>
    <string name="preferences_disclaimer_reset_summary">Reset any overrides or disclaimers on safe behavior</string>
    <string name="preferences_disclaimer_reset_title">Reset disclaimers</string>
    <string name="preferences_notifications_timers_title">Configure timer notification</string>
    <string name="preferences_notifications_timers_summary">Change the notification behaviors (sound, vibration, etc) for when tests are ready</string>
    <string name="fragment_capture_review_instructions">Are you sure?\n\nAccording to automated review, your choices might need another look. You can use the Job Aid for help interpreting the test result.</string>
    <string name="preferences_network_battery_title">Enable network power limit</string>
    <string name="preferences_network_battery_on_summary">Network will be disabled when battery is low</string>
    <string name="bottom_menu_text_extra">Extra</string>
    <string name="capture_secondary_title">Extra Image Capture</string>
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
    <string name="choice_blank"></string>
    <string name="bottom_menu_text_questions">Inputs</string>
    <string name="capture_session_missing_msg">Requested session was not found, it may have expired or been removed</string>
    <string name="capture_secondary_prompt_msg">You\'ve been asked to take a second picture of this RDT to collect data for future analysis.\n\nThis won\'t affect the other picture you have taken or your interpretation of the result</string>
    <string name="capture_secondary_btn_understand">I understand</string>
    <string name="capture_secondary_btn_view_instructions">View Instructions</string>
    <string name="capture_secondary_prompt_directions">Please capture a second image of the test cassette.</string>
    <string name="capture_secondary_btn_capture">Capture Extra Image</string>
    <string name="provision_input_question_capture_card">Do you have a Capture Card to use with this RDT?</string>
    <string name="capture_summary_status_extra_image">Extra Image</string>
</resources>