<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ListPreference
        android:key="language"
        android:title="@string/preference_app_language"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="system_default"
        />

    <Preference
        app:key="notification_settings"
        app:title="@string/preferences_notifications_timers_title"
        app:summary="@string/preferences_notifications_timers_summary"/>

    <Preference
        app:key="reset_disclaimers"
        app:title="@string/preferences_disclaimer_reset_title"
        app:summary="@string/preferences_disclaimer_reset_summary"/>
</androidx.preference.PreferenceScreen>