<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/provision_define"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/bottom_menu_text_define" />

    <item
        android:id="@+id/provision_questions"
        android:icon="@drawable/ic_baseline_question_24"
        android:title="@string/bottom_menu_text_questions" />

    <item
        android:id="@+id/provision_instructions"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/bottom_menu_text_instructions" />

    <item
        android:id="@+id/provision_start"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/bottom_menu_text_start" />
</menu>