<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.rdtoolkit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sessions"
        android:name="org.rdtoolkit.ui.sessions.SessionsFragment"
        android:label="@string/menu_sessions"
        tools:layout="@layout/fragment_sessions" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="org.rdtoolkit.ui.preferences.ToolkitPreferencesFragment"
        android:label="@string/action_settings" />
</navigation>